# clo_mcp_windows

./: README.md
mcp/: CMakeLists.txt
mcp/src/: example.cpp  plugin.cpp
sdk/CLOAPIInterface/: CLOAPIInterface.h
sdk/CLOAPIInterface/Lib/: CLOAPIInterface.lib
sdk/CLOAPIInterface/include/: CloApiData.h  ExportAPIInterface.h  FabricAPIInterface.h  ImportAPIInterface.h  PatternAPIInterface.h  RestAPIInterface.h  UtilityAPIInterface.h
sdk/Documents/: ChangeLog.txt  JFABSpec.json  TechPackSpec.json  TechPackSpecFull.json  fabric_sample.jfab
sdk/Samples/CloEventPlugin/: CMakeLists.txt  CloEventPlugin.cpp  CloEventPlugin.h  webSitedragExample.html
sdk/Samples/ExportPlugin/: CMakeLists.txt  ExportPlugin.cpp
sdk/Samples/LibraryWindowImplementation/: CMakeLists.txt  LibraryWindowImplPlugin.cpp  LibraryWindowImplPlugin.h  LibraryWindowInterface.h  targetver.h
sdk/Samples/LibraryWindowImplementation/classes/: APICLODataBase.h  APIDefine.h  APISearchDialogSample.cpp  APISignInDialogSample.cpp  APISignInDialogSample.h  APIStorage.cpp  APIStorage.h  APIUtility.cpp  APIUtility.h  PLMSettingsSample.cpp  PLMSettingsSample.ui
